--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html lang="fr">
+<html lang="FR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/fertilia.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/frontend/src/assets/fertilia_logo.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
