Nav bar set change 2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="La technologie qui fait fleurir votre terre">
     <meta name="keywords" content="Innovation, agriculture, moderne, durabilité, performance, simplicité, connectivité, avenir">
     <meta name="author" content="Josias Kabambi">
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/src/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
