PostCss config change1

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,18 +8,11 @@
     <meta name="description" content="La technologie qui fait fleurir votre terre">
     <meta name="keywords" content="Innovation, agriculture, moderne, durabilité, performance, simplicité, connectivité, avenir">
     <meta name="author" content="Josias Kabambi">
-    <link rel="stylesheet" href="/src/main.css">
+    <link type="module" href="/src/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
-
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-      }
-    </script>
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>'>
     <link rel="shortcut icon" href="/images/fertilia_logo.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -29,6 +22,7 @@
     <title>Fertilia</title>
   </head>
   <body>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
