--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,14 +8,13 @@
     <meta name="description" content="La technologie qui fait fleurir votre terre">
     <meta name="keywords" content="Innovation, agriculture, moderne, durabilité, performance, simplicité, connectivité, avenir">
     <meta name="author" content="Josias Kabambi">
-    <link href="./src/main.css" rel="stylesheet">
+    <link href="./src/style.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="/images/fertilia_logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Fertilia</title>
   </head>
