Theme color change for mobile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/fertilia.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/frontend/src/assets/fertilia_logo.ico" type="image/x-icon">
+    <meta name="theme-color" content="#1f2937"/>
     <meta name="description" content="La technologie qui fait fleurir votre terre">
     <meta name="keywords" content="Innovation, agriculture, moderne, durabilité, performance, simplicité, connectivité, avenir">
     <meta name="author" content="Josias Kabambi">
