--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
-<html lang="FR">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fertilia.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/frontend/src/assets/fertilia_logo.ico" type="image/x-icon">
@@ -9,7 +9,7 @@
     <meta name="description" content="La technologie qui fait fleurir votre terre">
     <meta name="keywords" content="Innovation, agriculture, moderne, durabilité, performance, simplicité, connectivité, avenir">
     <meta name="author" content="Josias Kabambi">
-    <link href="./src/style.css" rel="stylesheet">
+    <!-- <link href="./src/style.css" rel="stylesheet"> -->
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
